--- a/angular.json
+++ b/angular.json
@@ -1,18 +1,8 @@
 {
   "$schema": "./node_modules/nx/schemas/workspace-schema.json",
   "version": 2,
-  "projects": {},
-  "schematics": {
-    "@nrwl/angular": {
-      "application": {
-        "linter": "eslint"
-      },
-      "library": {
-        "linter": "eslint"
-      },
-      "storybook-configuration": {
-        "linter": "eslint"
-      }
-    }
+  "projects": {
+    "client": "apps/client",
+    "client-e2e": "apps/client-e2e"
   }
 }
