--- a/.github/workflows/fe-pr-checks.yml
+++ b/.github/workflows/fe-pr-checks.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches: [init]
     paths: ['apps/client/**', 'libs/**/fe/**']
+
+  pull_request:
+    branches: [master]
+    paths: ['apps/client/**', 'libs/**/fe/**']
   workflow_dispatch:
 
 jobs:
