--- a/.github/workflows/npm-install.yml
+++ b/.github/workflows/npm-install.yml
@@ -1,4 +1,4 @@
-name: FE checks
+name: Install Dependencies
 
 on:
   push:
@@ -28,7 +28,7 @@ jobs:
         env:
           node-version: ${{ matrix.node-version }}
 
-      - name: node_modules cache
+      - name: Cache node_modules
         id: node-modules-cache
         uses: actions/cache@v2
         env:
