--- a/apps/client/project.json
+++ b/apps/client/project.json
@@ -81,6 +81,13 @@
         "jestConfig": "apps/client/jest.config.ts",
         "passWithNoTests": true
       }
+    },
+    "deploy": {
+      "executor": "@nrwl/workspace:run-commands",
+      "options": {
+        "commands": ["curl -X POST -d {} https://api.netlify.com/build_hooks/63260671e2cf5779fb4cb6a3"],
+        "parallel": false
+      }
     }
   },
   "tags": []
