--- a/nx.json
+++ b/nx.json
@@ -2,13 +2,13 @@
   "$schema": "./node_modules/nx/schemas/nx-schema.json",
   "npmScope": "nx-place",
   "affected": {
-    "defaultBase": "main"
+    "defaultBase": "init"
   },
   "tasksRunnerOptions": {
     "default": {
       "runner": "nx/tasks-runners/default",
       "options": {
-        "cacheableOperations": ["build", "lint", "test", "e2e"]
+        "cacheableOperations": ["build", "lint", "test", "e2e", "deploy"]
       }
     }
   },
