--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,19 +2,18 @@ name: Deploy
 
 on:
   workflow_run:
-    workflows: ["Install Dependencies"]
-    types:
-      - completed
+    workflows: [Install]
+    types: [completed]
 
 jobs:
-  build:
+  on-success:
     runs-on: ubuntu-latest
+    steps:
+      if: ${{ github.event.workflow_run.conclusion == 'success' }}
+      steps:
+        - run: echo 'The triggering workflow passed'
+        - run: nx affected --target=deploy
 
-  steps:
-    - name: Checkout
-      uses: actions/checkout@v3
-      with:
-        fetch-depth: 0
-
-    - name: Deploy
-      run: nx affected --target=deploy
+      if: ${{ github.event.workflow_run.conclusion == 'failure' }}
+      steps:
+        - run: echo 'The triggering workflow failed'
