--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ jobs:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - run: echo 'The triggering workflow passed'
-      - run: nx affected --target=deploy
+      - run: ls -la
 
   on-failure:
     runs-on: ubuntu-latest
