--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,10 @@ jobs:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - run: echo 'The triggering workflow passed'
+      - uses: actions/download-artifact@v3
+        with:
+          name: install-artifact
+          path: install-artifact/**/*
       - name: Checkout
         uses: actions/checkout@v3
         with:
