--- a/.github/workflows/npm-install.yml
+++ b/.github/workflows/npm-install.yml
@@ -42,3 +42,8 @@ jobs:
       - name: Npm install
         if: steps.node-modules-cache.outputs.cache-hit != 'true'
         run: npm install
+
+      - uses: actions/upload-artifact@v3
+        with:
+          name: install-artifact
+          path: install-artifact/**/*
