--- a/.github/workflows/npm-install.yml
+++ b/.github/workflows/npm-install.yml
@@ -44,3 +44,6 @@ jobs:
         run: npm install
 
       - uses: actions/upload-artifact@v3
+        with:
+          name: install-artifact
+          path: ./**/*
