--- a/.github/workflows/npm-install.yml
+++ b/.github/workflows/npm-install.yml
@@ -42,4 +42,6 @@ jobs:
       - name: Npm install
         if: steps.node-modules-cache.outputs.cache-hit != 'true'
         run: npm install
+
+      - name: Deploy
         run: nx affected --target=deploy
