--- a/.github/workflows/npm-install.yml
+++ b/.github/workflows/npm-install.yml
@@ -44,4 +44,4 @@ jobs:
         run: npm install
 
       - name: Deploy
-        run: nx affected --target=deploy
+        run: npx nx affected --target=deploy
