--- a/.github/workflows/npm-install.yml
+++ b/.github/workflows/npm-install.yml
@@ -40,4 +40,6 @@ jobs:
         run: npm install
 
       - name: Deploy
-        run: npx nx affected --target=deploy
+        env:
+          NX_BASE: remotes/origin/${{ github.event.push.base.ref }}
+        run: npx nx affected --target=deploy --base=$NX_BASE
