--- a/.github/workflows/npm-install.yml
+++ b/.github/workflows/npm-install.yml
@@ -41,12 +41,12 @@ jobs:
 
       - name: Deploy
         env:
-          client-init-deploy-key: ${{ secrets.CLIENT_INIT_DEPLOY_KEY }}
+          CLIENT_INIT_DEPLOY_KEY: ${{ secrets.CLIENT_INIT_DEPLOY_KEY }}
         run: |
           npx nx affected \
           --target=deploy \
           --base=${{ github.event.before }} \
           --head=${{ github.event.after }} \
           --args="\
-          --client-init-deploy-key=$client-init-deploy-key\
+          --client-init-deploy-key=$CLIENT_INIT_DEPLOY_KEY\
           "
