--- a/.github/workflows/npm-install.yml
+++ b/.github/workflows/npm-install.yml
@@ -48,7 +48,5 @@ jobs:
           --target=deploy \
           --base=${{ github.event.before }} \
           --head=${{ github.event.after }} \
-          --args="\
-          --client-init-deploy-key=$CLIENT_INIT_DEPLOY_KEY\
-          --client-2-init-deploy-key=$CLIENT_2_INIT_DEPLOY_KEY\
-          "
+          --client-init-deploy-key=$CLIENT_INIT_DEPLOY_KEY \
+          --client-2-init-deploy-key=$CLIENT_2_INIT_DEPLOY_KEY
