--- a/.github/workflows/npm-install.yml
+++ b/.github/workflows/npm-install.yml
@@ -62,5 +62,5 @@ jobs:
           --base=${{ env.before-sha }} \
           --head=${{ env.after-sha }} \
           --NETLIFY_AUTH_TOKEN=$NETLIFY_AUTH_TOKEN \
-          --CLIENT_SITE_ID=CLIENT_SITE_ID \
-          --CLIENT_2_SITE_ID=CLIENT_2_SITE_ID \
+          --CLIENT_SITE_ID=$CLIENT_SITE_ID \
+          --CLIENT_2_SITE_ID=$CLIENT_2_SITE_ID \
