--- a/.github/workflows/npm-install.yml
+++ b/.github/workflows/npm-install.yml
@@ -39,6 +39,16 @@ jobs:
         if: steps.node-modules-cache.outputs.cache-hit != 'true'
         run: npm install
 
+      - name: Patch version
+        run: node ./.github/hooks/patch-version
+
+      - run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add .
+          git commit -m "patch version [skip ci]"
+          git push origin HEAD:${{ github.event.pull_request.base.ref }}
+
       - name: Affected build
         env:
           before-sha: ${{ github.event.before }}
